--- a/FRONT/my-proyecto-app/src/app/pages/inventario/inventario.component.html
+++ b/FRONT/my-proyecto-app/src/app/pages/inventario/inventario.component.html
@@ -8,7 +8,8 @@
         <p class="mt-1 text-sm text-gray-600">Administra los productos y materiales en stock</p>
       </div>
       <div class="mt-4 md:mt-0">
-        <button class="inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700" 
+        <button *appCanDo="'insertar'; ventana: 'Inventario'"
+                class="inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700" 
                 (click)="openForm()">
           <i class="fas fa-plus mr-2"></i> Nuevo Item
         </button>
@@ -57,11 +58,13 @@
               </span>
             </td>
             <td class="px-6 py-4 whitespace-nowrap text-sm font-medium">
-              <button class="text-indigo-600 hover:text-indigo-900 mr-3" (click)="openForm(inventario)">
+              <button *appCanDo="'editar'; ventana: 'Inventario'"
+                      class="text-indigo-600 hover:text-indigo-900 mr-3" (click)="openForm(inventario)">
                 <i class="fas fa-edit mr-1"></i> Editar
               </button>
                 <!-- Botón de trazabilidad eliminado -->
-              <button class="text-red-600 hover:text-red-900" (click)="deleteInventario(inventario.id_inventario)">
+              <button *appCanDo="'eliminar'; ventana: 'Inventario'"
+                      class="text-red-600 hover:text-red-900" (click)="deleteInventario(inventario.id_inventario)">
                 <i class="fas fa-trash mr-1"></i> Eliminar
               </button>
             </td>
