--- a/FRONT/my-proyecto-app/src/app/pages/menu/menu.component.html
+++ b/FRONT/my-proyecto-app/src/app/pages/menu/menu.component.html
@@ -64,7 +64,7 @@
       <div class="pt-2 pb-3 space-y-1">
 
         <a routerLink="/menu/dashboard" routerLinkActive="bg-gray-100 text-gray-900" class="mobile-nav-link border-l-4 border-transparent text-gray-700 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-900 block pl-3 pr-4 py-2 text-base font-medium">Dashboard</a>
-
+        <!-- Gestion de personal -->
         <div *ngIf="canAccess('Personal') || canAccess('Asistencia') || canAccess('Turnos')">
           <button (click)="toggleMobileSubmenu('personal')" class="w-full flex justify-between items-center mobile-nav-link border-l-4 border-transparent text-gray-700 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-900 pl-3 pr-4 py-2 text-base font-medium">
             <span>Gestión de Personal</span>
@@ -76,7 +76,7 @@
             <a *ngIf="canAccess('Turnos')" routerLink="/menu/turnos" routerLinkActive="bg-gray-100 text-gray-900" class="mobile-nav-link text-gray-600 hover:bg-gray-50 hover:text-gray-900 block pl-3 pr-4 py-2 text-sm font-medium">Turnos</a>
           </div>
         </div>
-
+        <!-- Gestion de usuarios-->
         <div *ngIf="canAccess('Usuarios') || canAccess('Clientes')">
           <button (click)="toggleMobileSubmenu('usuarios')" class="w-full flex justify-between items-center mobile-nav-link border-l-4 border-transparent text-gray-700 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-900 pl-3 pr-4 py-2 text-base font-medium">
             <span>Gestión de Usuarios</span>
@@ -88,7 +88,7 @@
             <a routerLink="/menu/pedidos" routerLinkActive="bg-gray-100 text-gray-900" class="mobile-nav-link text-gray-600 hover:bg-gray-50 hover:text-gray-900 block pl-3 pr-4 py-2 text-sm font-medium">Pedidos</a>
           </div>
         </div>
-
+        <!-- Produccion e inventario -->
         <div>
           <button (click)="toggleMobileSubmenu('produccion')" class="w-full flex justify-between items-center mobile-nav-link border-l-4 border-transparent text-gray-700 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-900 pl-3 pr-4 py-2 text-base font-medium">
             <span>Producción e Inventario</span>
@@ -104,6 +104,18 @@
           </div>
         </div>
 
+        <!-- Gestión de Ventas y Facturación -->
+        <div>
+          <button (click)="toggleMobileSubmenu('produccion')" class="w-full flex justify-between items-center mobile-nav-link border-l-4 border-transparent text-gray-700 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-900 pl-3 pr-4 py-2 text-base font-medium">
+            <span>Gestión de Ventas y Facturación</span>
+            <i class="fas fa-chevron-down transition-transform duration-200" [class.rotate-180]="mobileSubmenus['ventas']"></i>
+          </button>
+          <div class="submenu-content pl-4 border-l-4 border-gray-200 ml-3" [class.open]="mobileSubmenus['ventas']">
+            <a routerLink="/menu/facturas" routerLinkActive="bg-gray-50 text-gray-900" class="block px-4 py-2.5 text-sm text-gray-700 hover:bg-gray-50 transition rounded-t-md transform translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 duration-300">Facturas</a>
+            <a routerLink="/menu/pedidos" routerLinkActive="bg-gray-50 text-gray-900" class="block px-4 py-2.5 text-sm text-gray-700 hover:bg-gray-50 transition rounded-b-md transform translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 duration-400">Pedidos</a>
+          </div>
+        </div>
+        <!-- Gestion de Reportes y Permisos -->
         <div>
           <button (click)="toggleMobileSubmenu('reportes')" class="w-full flex justify-between items-center mobile-nav-link border-l-4 border-transparent text-gray-700 hover:bg-gray-50 hover:border-gray-300 hover:text-gray-900 pl-3 pr-4 py-2 text-base font-medium">
             <span>Gestión de Reportes y Permisos</span>
@@ -150,7 +162,7 @@
       <div class="flex space-x-8">
         <a routerLink="/menu/dashboard" routerLinkActive="border-indigo-500 text-gray-900"
           class="nav-item desktop-nav-link border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 pb-2 border-b-2 text-sm font-medium">Dashboard</a>
-
+        <!-- Gesstion de Personal -->
         <div class="relative group" *ngIf="canAccess('Personal') || canAccess('Asistencia') || canAccess('Turnos')">
           <div class="nav-item desktop-nav-link border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 pb-2 border-b-2 text-sm font-medium cursor-pointer" aria-haspopup="true">
             Gestión de Personal
@@ -163,7 +175,7 @@
             <a *ngIf="canAccess('Turnos')" routerLink="/menu/turnos" routerLinkActive="bg-gray-50 text-gray-900" class="block px-4 py-2.5 text-sm text-gray-700 hover:bg-gray-50 transition rounded-b-md transform translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 duration-500">Turnos</a>
           </div>
         </div>
-
+        <!-- Gestion de Usuarios -->
         <div class="relative group" *ngIf="canAccess('Usuarios') || canAccess('Clientes')">
           <div class="nav-item desktop-nav-link border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 pb-2 border-b-2 text-sm font-medium cursor-pointer" aria-haspopup="true">
             Gestión de Usuarios
@@ -174,12 +186,9 @@
             <a *ngIf="canAccess('Usuarios')" routerLink="/menu/usuarios" routerLinkActive="bg-gray-50 text-gray-900" class="block px-4 py-2.5 text-sm text-gray-700 hover:bg-gray-50 transition rounded-t-md transform translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 duration-300">Usuarios</a>
             
             <a *ngIf="canAccess('Clientes')" routerLink="/menu/clientes" routerLinkActive="bg-gray-50 text-gray-900" class="block px-4 py-2.5 text-sm text-gray-700 hover:bg-gray-50 transition transform translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 duration-350">Clientes</a>
-            
-            <a routerLink="/menu/pedidos" routerLinkActive="bg-gray-50 text-gray-900" class="block px-4 py-2.5 text-sm text-gray-700 hover:bg-gray-50 transition rounded-b-md transform translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 duration-400">Pedidos</a>
-            
           </div>
         </div>
-
+        <!-- Producción e Inventario -->
         <div class="relative group">
           <div class="nav-item desktop-nav-link border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 pb-2 border-b-2 text-sm font-medium cursor-pointer" aria-haspopup="true">
             Producción e Inventario
@@ -200,6 +209,10 @@
           <div class="nav-item desktop-nav-link border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700 inline-flex items-center px-1 pt-1 pb-2 border-b-2 text-sm font-medium cursor-pointer" aria-haspopup="true">
             Gestión de Ventas y Facturación
             <svg class="ml-1 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" /></svg>
+          </div>
+          <div class="absolute left-0 top-full mt-0 min-w-[12rem] rounded-md shadow-lg bg-white border border-gray-200 z-20 opacity-0 invisible scale-95 origin-top group-hover:opacity-100 group-hover:visible group-hover:scale-100 transition-all duration-200">
+            <a routerLink="/menu/facturas" routerLinkActive="bg-gray-50 text-gray-900" class="block px-4 py-2.5 text-sm text-gray-700 hover:bg-gray-50 transition rounded-t-md transform translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 duration-300">Facturas</a>
+            <a routerLink="/menu/pedidos" routerLinkActive="bg-gray-50 text-gray-900" class="block px-4 py-2.5 text-sm text-gray-700 hover:bg-gray-50 transition rounded-b-md transform translate-y-4 opacity-0 group-hover:translate-y-0 group-hover:opacity-100 duration-400">Pedidos</a>
           </div>
         </div>
 
